--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.23.0",
-    "big-integer": "^1.6.24",
+    "big-integer": "^1.6.25",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cryptlib": "^1.0.3",
     "crypto": "^1.0.1",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
@@ -33,18 +34,23 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
+    "mashape-oauth": "^0.1.71",
+    "music-api": "^0.3.11",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "querystring": "^0.2.0",
     "react": "^15.6.1",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
+    "react-hoc-query": "^1.0.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
