--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fetch-jsonp": "^1.1.1",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
@@ -34,6 +34,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
+    "less-loader": "^4.0.5",
     "mashape-oauth": "^0.1.71",
     "music-api": "^0.3.11",
     "object-assign": "4.1.1",
@@ -110,6 +111,8 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.2.1"
+    "eslint-plugin-react": "^7.2.1",
+    "less": "^2.7.3",
+    "stylelint-config-standard": "^17.0.0"
   }
 }
