--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "react/jsx-wrap-multilines": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": [1],
-    "linebreak-style": ["error", "windows"]
+    "linebreak-style": ["off", "windows"]
   },
   "env": {
       "browser": true,
