--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "big-integer": "^1.6.25",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "cryptlib": "^1.0.3",
-    "crypto": "^1.0.1",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "es6-promise": "^4.1.1",
@@ -48,7 +46,6 @@
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
-    "react-hoc-query": "^1.0.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "redux": "^3.7.2",
@@ -63,7 +60,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "NODE_ENV=production node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint": "eslint --fix src/** test/**"
   },
