--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "react/jsx-wrap-multilines": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": [1],
+    "jsx-a11y/no-static-element-interactions": 0,
     "linebreak-style": ["off", "windows"]
   },
   "env": {
